--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "all-seeing-eye-api",
+  "name": "smart-brain-back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "script.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start:dev": "nodemon server.js"
   },
-  "author": "",
+  "keywords": [],
+  "author": "Jeremy Kimble",
   "license": "ISC",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.3",
-    "clarifai": "^2.8.0",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "knex": "^0.15.2",
-    "pg": "^7.4.3"
-  },
-  "devDependencies": {
-    "nodemon": "^1.18.3"
+    "bcrypt": "^5.0.1",
+    "clarifai-nodejs-grpc": "^7.3.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "knex": "^0.95.4",
+    "pg": "^8.6.0"
   }
 }
